// Code generated by protoc-gen-go. DO NOT EDIT
// source: rocket/v1/rocket.proto
syntax = "proto3";
package rocket;
option go_package ="rocket/v1";
message Rocket{
    string id = 1;
    string name = 2;
    string type = 3;
}
service RocketService{
    rpc GetRocket(GetRocketRequest) returns (GetRocketResponse);
    rpc AddRocket(AddRocketRequest) returns (AddRocketResponse);
    rpc DeleteRocket(DeleteRocketRequest) returns (DeleteRocketResponse);
}

message GetRocketRequest{
    string id = 1;
}

message GetRocketResponse{
    Rocket rocket = 1;
}

message AddRocketRequest{
    Rocket rocket = 1;
}

message AddRocketResponse{
    Rocket rocket = 1;
}
message DeleteRocketRequest{
   Rocket rocket = 1;
}

message DeleteRocketResponse{
    string status = 1;
}